(library
  (name        conduit_mirage)
  (public_name mirage-conduit)
  (preprocess  (pps ppx_sexp_conv))
  (modules     conduit_mirage resolver_mirage conduit_xenstore)
  (wrapped     false)
  (libraries   conduit conduit-lwt mirage-stack-lwt mirage-time-lwt
               mirage-flow-lwt dns-mirage-client ipaddr.sexp
               vchan tls tls.mirage xenstore.client uri.services))
